--- a/packages/expo-modules-core/expo-module.config.json
+++ b/packages/expo-modules-core/expo-module.config.json
@@ -1,5 +1,8 @@
 {
   "platforms": ["apple", "android"],
+  "android": {
+    "modules": ["expo.modules.networkfetch.ExpoNetworkFetchModule"]
+  },
   "apple": {
     "podspecPath": "./ExpoModulesCore.podspec"
   }
