--- a/apps/router-e2e/launch-tests.yml
+++ b/apps/router-e2e/launch-tests.yml
@@ -2,7 +2,7 @@ appId: host.exp.Exponent
 ---
 - stopApp: host.exp.Exponent
 - openLink:
-    link: exp://192.168.1.174:8081/--/?_TEST_URL=1
+    link: exp://localhost:8081/--/?_TEST_URL=1
 # - assertVisible: 'URL:(tabs)/explore'
 # - tapOn: DISMISS_URL
 # # - assertVisible:
@@ -10,7 +10,7 @@ appId: host.exp.Exponent
 # #     text: (tabs)/explore
 # # `/`
 # - openLink:
-#     link: exp://192.168.1.174:8081/--/?_TEST_URL=1
+#     link: exp://localhost:8081/--/?_TEST_URL=1
 # - assertVisible: "URL:(tabs)"
 # - tapOn: DISMISS_URL
 # # - assertVisible:
@@ -19,7 +19,7 @@ appId: host.exp.Exponent
 
 # # `/modal`
 # - openLink:
-#     link: exp://192.168.1.174:8081/--/modal?_TEST_URL=1
+#     link: exp://localhost:8081/--/modal?_TEST_URL=1
 # - assertVisible: "URL:modal"
 # - tapOn: DISMISS_URL
 # # - assertVisible:
