[go] Upgrade to react-native 0.75.0 RC5

--- a/apps/expo-go/android/app/build.gradle
+++ b/apps/expo-go/android/app/build.gradle
@@ -39,6 +39,9 @@ react {
 
   cliFile = new File(["node", "--print", "require.resolve('@expo/cli')"].execute(null, rootDir).text.trim())
   bundleCommand = "export:embed"
+
+  /* Autolinking */
+  autolinkLibrariesWithApp()
 }
 
 android {
