--- a/apps/expo-go/package.json
+++ b/apps/expo-go/package.json
@@ -96,5 +96,13 @@
     "@types/react-redux": "^7.1.16",
     "@types/semver": "^7.5.8",
     "expo-module-scripts": "^3.0.0"
+  },
+  "expo": {
+    "autolinking": {
+      "exclude": [
+        "@react-native-segmented-control/segmented-control",
+        "expo-sqlite"
+      ]
+    }
   }
 }
