--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -12,8 +12,8 @@ jobs:
     env:
       E2E_ROUTER_USE_PUBLISHED_EXPO_GO: true
       E2E_ROUTER_EXPO_PORT: 8081
-      E2E_ROUTER_EXPO_SERVER: 'http://localhost:${E2E_ROUTER_EXPO_PORT}'
-      E2E_ROUTER_APP_URL: 'exp://localhost:${E2E_ROUTER_EXPO_PORT}'
+      E2E_ROUTER_EXPO_SERVER: 'http://localhost:$E2E_ROUTER_EXPO_PORT'
+      E2E_ROUTER_APP_URL: 'exp://localhost:$E2E_ROUTER_EXPO_PORT'
     steps:
       - uses: actions/checkout@v4
 
@@ -57,6 +57,7 @@ jobs:
       - name: Preload Expo bundle
         run: |
           # Get the bundle URL
+          echo $E2E_ROUTER_EXPO_SERVER
           BUNDLE_INFO=$(curl --silent --show-error --fail -H "Content-Type: multipart/mixed" -H "expo-platform: ios" $E2E_ROUTER_EXPO_SERVER)
           BUNDLE_URL=$(echo $BUNDLE_INFO | jq -r ".launchAsset.url")
 
@@ -70,6 +71,6 @@ jobs:
           MAESTRO_APP_URL: $E2E_ROUTER_APP_URL
         run: |
           # The current Expo Go does not support the expo-linking on main
-          npm i expo-linking@6.3.1
+          npm i expo-linking@sdk-50
           # Run the Expo Dev Server in the background
           maestro test launch-tests.yml --no-ansi --format=junit
