--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -12,8 +12,6 @@ jobs:
     env:
       E2E_ROUTER_USE_PUBLISHED_EXPO_GO: true
       E2E_ROUTER_EXPO_PORT: 8081
-      E2E_ROUTER_EXPO_SERVER: 'http://localhost:$E2E_ROUTER_EXPO_PORT'
-      E2E_ROUTER_APP_URL: 'exp://localhost:$E2E_ROUTER_EXPO_PORT'
     steps:
       - uses: actions/checkout@v4
 
@@ -58,7 +56,7 @@ jobs:
         run: |
           # Get the bundle URL
           echo $E2E_ROUTER_EXPO_SERVER
-          BUNDLE_INFO=$(curl --silent --show-error --fail -H "Content-Type: multipart/mixed" -H "expo-platform: ios" $E2E_ROUTER_EXPO_SERVER)
+          BUNDLE_INFO=$(curl --silent --show-error --fail -H "Content-Type: multipart/mixed" -H "expo-platform: ios" "http://localhost:${E2E_ROUTER_EXPO_PORT}")
           BUNDLE_URL=$(echo $BUNDLE_INFO | jq -r ".launchAsset.url")
 
           # Start the build early by starting the build in the background
@@ -68,9 +66,10 @@ jobs:
         working-directory: apps/router-e2e
         env:
           MAESTRO_DRIVER_STARTUP_TIMEOUT: 180000
-          MAESTRO_APP_URL: $E2E_ROUTER_APP_URL
         run: |
           # The current Expo Go does not support the expo-linking on main
           npm i expo-linking@sdk-50
+          # Setup the maestro env
+          MAESTRO_APP_URL="exp://localhost:${E2E_ROUTER_EXPO_PORT}"
           # Run the Expo Dev Server in the background
           maestro test launch-tests.yml --no-ansi --format=junit
