move implementation from expo-modules-core to expo

--- a/packages/expo/expo-module.config.json
+++ b/packages/expo/expo-module.config.json
@@ -1,5 +1,8 @@
 {
   "platforms": ["apple", "android"],
+  "android": {
+    "modules": ["expo.modules.networkfetch.ExpoNetworkFetchModule"]
+  },
   "apple": {
     "modules": ["ExpoFetchModule"],
     "podspecPath": "Expo.podspec"
