--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   router-maestro:
-    runs-on: macos-14
+    runs-on: macos-12
     env:
       E2E_ROUTER_USE_PUBLISHED_EXPO_GO: true
       E2E_ROUTER_EXPO_PORT: 8081
@@ -70,6 +70,6 @@ jobs:
           # The current Expo Go does not support the expo-linking on main
           YARN_IGNORE_SCRIPTS=true yarn add expo-linking@sdk-50
           # Setup the maestro env
-          MAESTRO_APP_URL="exp://localhost:${E2E_ROUTER_EXPO_PORT}"
+          MAESTRO_APP_URL="exp://localhost:${E2E_ROUTER_EXPO_PORT}/--"
           # Run the Expo Dev Server in the background
           maestro test launch-tests.yml --no-ansi --format=junit
