--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -70,4 +70,9 @@ jobs:
           # Setup the maestro env
           MAESTRO_APP_URL="exp://localhost:${E2E_ROUTER_EXPO_PORT}/--"
           # Run the Expo Dev Server in the background
-          maestro test launch-tests.yml --no-ansi --format=junit
+          maestro test launch-tests.yml --no-ansi --format=junit --debug-output ./logs
+      - name: Log output
+        if: ${{ failure() }}
+        working-directory: apps/router-e2e
+        run: |
+          cat ./logs/maestro.log
