--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -70,10 +70,10 @@ jobs:
           # Setup the maestro env
           MAESTRO_APP_URL="exp://localhost:${E2E_ROUTER_EXPO_PORT}/--"
           # Run the Expo Dev Server in the background
-          maestro test launch-tests.yml --no-ansi --format=junit --debug-output ./logs
+          maestro test launch-tests.yml --no-ansi --format=junit --debug-output logs
       - name: Log output
         if: ${{ failure() }}
-        working-directory: apps/router-e2e
+        working-directory: apps/router-e2e.maestro/tests
         run: |
-          ls -al ./logs
-          cat ./logs/maestro.log
+          cd $(find . -type d -name "2024*"  | head -n 1)
+          cat maestro.log
