--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -60,13 +60,17 @@ jobs:
           # Start the build early by starting the build in the background
           curl --silent --output /dev/null --show-error --fail $BUNDLE_URL &
 
+      - name: Fix expo-linking
+        working-directory: apps/router-e2e
+        run: |
+          # The current Expo Go does not support the expo-linking on main
+          YARN_IGNORE_SCRIPTS=true yarn add expo-linking@sdk-50
+
       - name: Run Maestro iOS tests
         working-directory: apps/router-e2e
         env:
           MAESTRO_DRIVER_STARTUP_TIMEOUT: 360000
         run: |
-          # The current Expo Go does not support the expo-linking on main
-          YARN_IGNORE_SCRIPTS=true yarn add expo-linking@sdk-50
           # Setup the maestro env
           MAESTRO_APP_URL="exp://localhost:${E2E_ROUTER_EXPO_PORT}/--"
           echo $MAESTRO_APP_URL
