--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -72,13 +72,14 @@ jobs:
           MAESTRO_DRIVER_STARTUP_TIMEOUT: 360000
         run: |
           # Setup the maestro env
-          MAESTRO_APP_URL="exp://localhost:${E2E_ROUTER_EXPO_PORT}/--"
-          echo $MAESTRO_APP_URL
+          echo "MAESTRO_APP_URL='exp://localhost:${E2E_ROUTER_EXPO_PORT}/--;" >> $GITHUB_ENV
           # Run the Expo Dev Server in the background
           maestro test launch-tests.yml --no-ansi --format=junit --debug-output .logs
+
       - name: Log output
         if: ${{ failure() }}
         working-directory: apps/router-e2e/.logs/.maestro/tests
         run: |
           cd $(find . -type d -name "202*"  | head -n 1)
           cat maestro.log
+          exit 1
