--- a/.github/workflows/router-e2e.yml
+++ b/.github/workflows/router-e2e.yml
@@ -72,7 +72,7 @@ jobs:
           MAESTRO_DRIVER_STARTUP_TIMEOUT: 360000
         run: |
           # Setup the maestro env
-          echo "MAESTRO_APP_URL='exp://localhost:${E2E_ROUTER_EXPO_PORT}/--;" >> $GITHUB_ENV
+          echo "MAESTRO_APP_URL='exp://localhost:${E2E_ROUTER_EXPO_PORT}/--;'" >> $GITHUB_ENV
           # Run the Expo Dev Server in the background
           maestro test launch-tests.yml --no-ansi --format=junit --debug-output .logs
 
