[bare-expo][fabric-tester] Reenable dev-client

--- a/apps/fabric-tester/package.json
+++ b/apps/fabric-tester/package.json
@@ -28,14 +28,5 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true,
-  "expo": {
-    "autolinking": {
-      "exclude": [
-        "expo-dev-client",
-        "expo-dev-launcher",
-        "expo-dev-menu"
-      ]
-    }
-  }
+  "private": true
 }
