chore(expo): expose private or unstable APIs from `expo-modules-core`

--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -30,6 +30,8 @@
     "config-plugins.d.ts",
     "devtools.js",
     "devtools.d.ts",
+    "internal.js",
+    "internal.d.ts",
     "react-native.config.js",
     "requiresExtraSetup.json",
     "tsconfig.base.json"
