fix: add missing peer deps to `expo`

--- a/packages/expo-auth-session/package.json
+++ b/packages/expo-auth-session/package.json
@@ -45,6 +45,7 @@
     "expo-module-scripts": "^3.0.0"
   },
   "peerDependencies": {
+    "expo": "*",
     "react": "*",
     "react-native": "*"
   },
