--- a/packages/expo-linking/package.json
+++ b/packages/expo-linking/package.json
@@ -37,6 +37,7 @@
     "expo-module-scripts": "^3.0.0"
   },
   "peerDependencies": {
+    "expo": "*",
     "react": "*",
     "react-native": "*"
   },
