--- a/packages/expo/expo-module.config.json
+++ b/packages/expo/expo-module.config.json
@@ -1,7 +1,7 @@
 {
   "platforms": ["apple", "android"],
   "android": {
-    "modules": ["expo.modules.networkfetch.ExpoNetworkFetchModule"]
+    "modules": ["expo.modules.fetch.ExpoFetchModule"]
   },
   "apple": {
     "modules": ["ExpoFetchModule"],
